Fix navbar dropdown to be always visible on mobile (#10)

--- a/css/agency.css
+++ b/css/agency.css
@@ -169,6 +169,7 @@ img::-moz-selection {
 #mainNav .navbar-nav .nav-item.dropdown > .dropdown-menu {
   background-color: inherit;
   border: none;
+  display: block;
 }
 
 #mainNav > .container,
@@ -192,7 +193,7 @@ img::-moz-selection {
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
   }
-  #mainNav .navbar-nav .nav-item > .dropdown-menu.show {
+  #mainNav .navbar-nav .nav-item.dropdown > .dropdown-menu {
     display: none;
   }
   #mainNav .navbar-nav .nav-item:hover > .dropdown-menu {
